working on drag & drop

--- a/src/components/GamePage/GamePage.module.scss
+++ b/src/components/GamePage/GamePage.module.scss
@@ -29,6 +29,7 @@
         left: 50%;
         transform: translate(-50%, -50%);
         font-size: 6cqw;
+        pointer-events: none;
       }
     }
 
