--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -111,8 +111,8 @@
           repeating-linear-gradient(
             45deg,
             #444cf7 25%,
-            #e5e5f7 25%,
-            #e5e5f7 75%,
+            #c3c3da 25%,
+            #c3c3ff 75%,
             #444cf7 75%,
             #444cf7
           );
