--- a/src/components/GamePage/GamePage.module.scss
+++ b/src/components/GamePage/GamePage.module.scss
@@ -1,5 +1,4 @@
 .gamePage {
-  padding: 16px;
   display: grid;
   grid-template-columns: repeat(7, 1fr);
   grid-template-rows: repeat(3, 1fr);
@@ -20,7 +19,6 @@
     color: var(--cell-color);
 
     &.foundationCell {
-      border: 4px solid var(--cell-color);
       border-radius: 6%;
 
       .foundationLabel {
@@ -30,11 +28,27 @@
         transform: translate(-50%, -50%);
         font-size: 6cqw;
         pointer-events: none;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        border: 2px solid var(--cell-color);
+        height: 90%;
+        width: 90%;
+        border-radius: 6%;
       }
     }
 
     &.stockpileCell {
       background-color: green;
+
+      .refreshIcon {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        cursor: pointer;
+      }
     }
 
     &.blankCell {
@@ -48,6 +62,6 @@
     padding: 8px;
     grid-column-gap: 2px;
     grid-row-gap: 16px;
-    min-width: unset;
+    min-width: 100vw;
   }
 }
