--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -6,6 +6,9 @@
   cursor: pointer;
   container-type: inline-size;
   font-weight: bold;
+  -webkit-user-select: none; /* For WebKit/iOS */
+  -moz-user-select: none; /* For Firefox */
+  -ms-user-select: none; /* For IE/Edge */
   user-select: none;
   touch-action: none;
 
@@ -25,6 +28,7 @@
     transition: transform 0.2s;
     transform-style: preserve-3d;
     border-radius: 6%;
+    user-select: none;
 
     .front,
     .back {
@@ -39,11 +43,13 @@
       padding: 5%;
       display: flex;
       flex-direction: column;
+      user-select: none;
     }
 
     .front {
       color: black;
       font-size: 25cqw;
+      user-select: none;
 
       &.diamond,
       &.heart {
@@ -61,9 +67,12 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        user-select: none;
 
         .value {
           color: inherit;
+          user-select: none;
+          touch-action: none;
         }
 
         .icon {
@@ -132,6 +141,7 @@
 
 @media only screen and (max-width: 700px) {
   .card {
+    user-select: none;
     .inner {
       .front {
         padding-top: 2px;
