--- a/src/components/Tower/Tower.module.scss
+++ b/src/components/Tower/Tower.module.scss
@@ -1,7 +1,9 @@
 .tower {
-  position: relative;
+  // position: relative;
   height: 100%;
   width: 100%;
+  // top: 5cqh;
+  container-type: inline-size;
 
   .card {
     position: absolute;
