--- a/src/components/ControlPanel/ControlPanel.module.scss
+++ b/src/components/ControlPanel/ControlPanel.module.scss
@@ -19,8 +19,13 @@
     border: none;
     cursor: pointer;
 
+    &:disabled {
+      cursor: not-allowed;
+      opacity: 0.4;
+    }
+
     @media (hover: hover) {
-      &:hover {
+      &:hover:not(:disabled) {
         background: rgba(0, 0, 0, 0.886);
       }
     }
