--- a/src/index.scss
+++ b/src/index.scss
@@ -8,6 +8,7 @@ body {
   flex-direction: column;
   font-family: serif;
   margin: 0;
+  font-family: sans-serif;
 
   opacity: 0.8;
   background-image:
