--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -33,8 +33,8 @@
 
     .front,
     .back {
-      background-color: white;
-      border: 1px solid rgba(0, 0, 0, 0.285);
+      background-color: var(--bg-card);
+      border: 1px solid var(--card-border-color);
       border-radius: inherit;
       position: absolute;
       width: 100%;
@@ -48,20 +48,20 @@
     }
 
     .front {
-      color: black;
+      color: var(--black-card-color);
       font-size: 25cqw;
       user-select: none;
 
       &.diamond,
       &.heart {
-        color: rgb(148, 8, 8);
-        fill: rgb(148, 8, 8);
+        color: var(--red-card-color);
+        fill: var(--red-card-color);
       }
 
       &.club,
       &.spade {
-        color: black;
-        fill: black;
+        color: var(--black-card-color);
+        fill: var(--black-card-color);
       }
 
       .middle {
@@ -78,28 +78,27 @@
       .pattern {
         display: flex;
         flex-grow: 1;
-        background-color: #e5e5f7;
         opacity: 0.8;
         border-radius: inherit;
 
-        background-color: #e5e5f7;
+        background-color: var(--card-back-pattern-2);
         opacity: 0.8;
         background-image:
           repeating-linear-gradient(
             45deg,
-            #444cf7 25%,
+            var(--card-back-pattern) 25%,
             transparent 25%,
             transparent 75%,
-            #444cf7 75%,
-            #444cf7
+            var(--card-back-pattern) 75%,
+            var(--card-back-pattern)
           ),
           repeating-linear-gradient(
             45deg,
-            #444cf7 25%,
-            #c3c3da 25%,
-            #c3c3ff 75%,
-            #444cf7 75%,
-            #444cf7
+            var(--card-back-pattern) 25%,
+            var(--card-back-pattern-2) 25%,
+            var(--card-back-pattern-2) 75%,
+            var(--card-back-pattern) 75%,
+            var(--card-back-pattern)
           );
         background-position:
           0 0,
