--- a/src/components/Menu/Menu.module.scss
+++ b/src/components/Menu/Menu.module.scss
@@ -13,31 +13,45 @@
     display: flex;
     align-items: center;
     padding: 1rem 2rem;
+    justify-content: center;
+
+    .btn {
+      background-color: transparent;
+      border: 2px solid white;
+      display: flex;
+      color: white;
+      align-items: center;
+      justify-content: center;
+      padding: 12px 18px;
+      font-size: 18px;
+      border-radius: 4px;
+      gap: 1rem;
+      cursor: pointer;
+      flex-grow: 1;
+      fill: white;
+
+      @media (hover: hover) {
+        &:hover {
+          opacity: 0.85;
+        }
+      }
+    }
 
     &.moves {
       justify-content: space-between;
     }
 
-    &.newGame {
-      justify-content: center;
+    &.restart {
       .btn {
-        background-color: rgb(135, 33, 76);
-        border: none;
-        display: flex;
-        color: white;
-        align-items: center;
-        justify-content: center;
-        padding: 12px 18px;
-        font-size: 18px;
-        border-radius: 4px;
-        gap: 1rem;
-        cursor: pointer;
+        border: 2px solid transparent;
+        background-color: #5252a6;
+      }
+    }
 
-        @media (hover: hover) {
-          &:hover {
-            background-color: rgb(149, 61, 98);
-          }
-        }
+    &.newGame {
+      .btn {
+        border: 2px solid transparent;
+        background-color: rgb(135, 33, 76);
       }
     }
   }
