adjust font sizes of large cards

--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -49,7 +49,7 @@
 
     .front {
       color: var(--black-card-color);
-      font-size: 25cqw;
+      font-size: 21px;
       user-select: none;
 
       &.diamond,
